--- a/package.json
+++ b/package.json
@@ -9,5 +9,10 @@
         "axios": "^1.6.4",
         "laravel-vite-plugin": "^1.0",
         "vite": "^5.0"
+    },
+    "dependencies": {
+        "leaflet": "^1.9.4",
+        "react": "^18.3.1",
+        "react-dom": "^18.3.1"
     }
 }
